// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the large accent-200 function () { return null; } icon 1`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-accent-200"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large accent-200 function () { return null; } icon 2`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-accent-200"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large accent-200 function () { return null; } icon 3`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-accent-200"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large accent-300 function () { return null; } icon 1`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-accent-300"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large accent-300 function () { return null; } icon 2`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-accent-300"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large accent-300 function () { return null; } icon 3`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-accent-300"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large accent-400 function () { return null; } icon 1`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-accent-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large accent-400 function () { return null; } icon 2`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-accent-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large accent-400 function () { return null; } icon 3`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-accent-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large primary-400 function () { return null; } icon 1`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-primary-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large primary-400 function () { return null; } icon 2`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-primary-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large primary-400 function () { return null; } icon 3`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-primary-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large shade-400 function () { return null; } icon 1`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-shade-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large shade-400 function () { return null; } icon 2`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-shade-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the large shade-400 function () { return null; } icon 3`] = `
<div
  className="simple-icon simple-icon--large simple-icon--color-shade-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small accent-200 function () { return null; } icon 1`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-accent-200"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small accent-200 function () { return null; } icon 2`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-accent-200"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small accent-200 function () { return null; } icon 3`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-accent-200"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small accent-300 function () { return null; } icon 1`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-accent-300"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small accent-300 function () { return null; } icon 2`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-accent-300"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small accent-300 function () { return null; } icon 3`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-accent-300"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small accent-400 function () { return null; } icon 1`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-accent-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small accent-400 function () { return null; } icon 2`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-accent-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small accent-400 function () { return null; } icon 3`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-accent-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small primary-400 function () { return null; } icon 1`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-primary-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small primary-400 function () { return null; } icon 2`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-primary-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small primary-400 function () { return null; } icon 3`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-primary-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small shade-400 function () { return null; } icon 1`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-shade-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small shade-400 function () { return null; } icon 2`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-shade-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;

exports[`Render the small shade-400 function () { return null; } icon 3`] = `
<div
  className="simple-icon simple-icon--small simple-icon--color-shade-400"
>
  <FontAwesomeIcon
    icon={[Function]}
  />
</div>
`;
